--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </div>
 
             <div class="card-footer text-white">
-                Wegodev Indonesia
+               Copyright &copy; 2023 IJlal Naufal Hibrizi
             </div>
         </div>
     </div>
